# Project-Zoo

./: CMakeLists.txt  Makefile  README.md  bambus.cpp  bambus.h  dachs.cpp  dachs.h  elephant.cpp  elephant.h  exceptions.h  fleisch.cpp  fleisch.h  fleischfresser.cpp  fleischfresser.h  futter.cpp  futter.h  gras.cpp  gras.h  main  main.cpp  panda.cpp  panda.h  pflanzen.cpp  pflanzen.h  pflanzenfresser.cpp  pflanzenfresser.h  tier.cpp  tier.h  tiger.cpp  tiger.h  zoo.cpp  zoo.h
